# statcast-mcp

./: .gitignore  README.md  REFERENCE.md  TOOLS_SUMMARY.md  batting_2023_top200_by_slg_full.txt  pyproject.toml
scripts/: verify_tools.py
src/statcast_mcp/: __init__.py  expanded_tools.py  limits.py  server.py
