[project]
name = "statcast-mcp"
version = "0.2.0"
description = "An MCP server that lets anyone query MLB Statcast data using natural language"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["mcp", "statcast", "baseball", "mlb", "sabermetrics"]
dependencies = [
    "mcp[cli]>=1.2.0",
    "pybaseball>=2.2.7",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
    "lxml>=5.0.0",
]

[project.scripts]
statcast-mcp = "statcast_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/statcast_mcp"]
